[project]
name = "laserbeak"
version = "0.1.0"
description = "Forked from https://github.com/notem/Laserbeak-WF-Classifier"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "timm",
    "einops>=0.8.0",
    "torchao>=0.8.0",
    "torchtune>=0.5.0",
    "torch>=2.5.1",
    "scipy>=1.15.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
timm = { git = "https://github.com/huggingface/pytorch-image-models.git" }
